@@ -5,6 +5,15 @@ $Id$
 Project change log:
 http://logicLAB.jira.com/browse/PCPLPSD#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
 
+HEAD
+
+- Updated coverage report
+
+- Fixed bug in URL pointing to bug reporting facility [PCPLPSD-10]
+
+  https://logiclab.jira.com/browse/PCPLPSD-10
+
+
 0.04 2014-01-24
 
 - Specified minimum version of Perl (5.8.0) in Build.PL for meta consumption
